# 3d-cli

./: .gitignore  AGENTS.md  APPLY-RESEARCH.md  GLOSSARY.md  README.md  RESEARCH.md  ROADMAP.md  mypy.ini  pyproject.toml  requirements.txt  rig.yaml
.github/workflows/: ci.yml
assets/templates/: AGENTS.project.md  mcp.json  pre-commit
docs/: APPLY-RESEARCH.md  DESIGN.md  critic-prompts.md  fit-camera-audit.md  migration.md
docs/architecture/: lib-map.md
docs/benchmarks/: 3d-cli-arm-lessons.md
docs/commands/: README.md  ai.md  animate.md  arrange.md  auth.md  axis.md  bench.md  check.md  collision.md  compare.md  doctor.md  events.md  export.md  fit-camera.md  fit-niche.md  generate.md  hardware.md  import.md  init.md  inventory.md  judge.md  kinematics.md  libs.md  lint.md  match.md  materials.md  mesh.md  metrics.md  multi.md  ollama.md  om.md  opdag.md  overlay.md  pack.md  params.md  preprocess.md  preview.md  print.md  printability.md  printers.md  (+19 more)
docs/debates/: audit.md
docs/img/: generate.py
docs/notes/: active-worktrees-2026-06-06.md  fit-camera-assets.md  mac-image-to-3d-providers.md  spatial-fit-camera-experiments.md  trellis-proxy-alignment.md
docs/research/: 3d-cli-backlog.md  benchmarks-and-metrics.md  fit-camera.md  report.md  sources.md
docs/rules/: code-style.md  decision-requests.md  development.md  testing.md
docs/specs/: 2026-06-05-3d-cli-architecture.md  fit-camera-next-session.md
docs/workflows/: reference-backplate.md
examples/: cube.scad
lib/: ai_tools.py  animation.py  arrange_pack.py  axis.py  cmd_acceptance.sh  cmd_check.sh  cmd_collision.sh  cmd_doctor.sh  cmd_export.sh  cmd_fit-camera.sh  cmd_libs.sh  cmd_match.sh  cmd_mesh.sh  cmd_multi.sh  cmd_overlay.sh  cmd_params.sh  cmd_preprocess.sh  cmd_preview.sh  cmd_printability.sh  cmd_render.sh  cmd_score.sh  cmd_section.sh  cmd_setup.sh  cmd_silhouette.sh  cmd_slice.sh  cmd_validate.sh  collision_check.py  collision_viz.py  common.sh  config.py  debug_overlay.py  errors.py  events.py  export_formats.py  extract_params.py  fit_camera.py  fit_camera_math.py  frame_check.py  hardware.py  hf_auth.py  (+35 more)
lib/ai/: __init__.py  backends.py  bench.py  blockout.py  design.py  judge.py  veto.py
lib/cli/: __init__.py  dispatch.py  env.py  imaging.py  paths.py  pyrun.py  registry.py
lib/commands/: __init__.py  ai.py  animate.py  arrange.py  auth.py  axis.py  bench.py  check.py  collision.py  compare.py  doctor.py  events.py  export.py  fit_camera.py  fit_niche.py  generate.py  hardware.py  import.py  init.py  inventory.py  judge.py  kinematics.py  libs.py  lint.py  match.py  materials.py  mesh.py  metrics.py  multi.py  ollama.py  om.py  opdag.py  overlay.py  pack.py  params.py  preprocess.py  preview.py  print.py  printability.py  printers.py  (+19 more)
lib/data/: materials.yaml  printers.yaml
scripts/: install-dev-hooks.sh
tests/: conftest.py  run_gate.py  test_ai.py  test_ai_backends.py  test_ai_bench.py  test_ai_blockout.py  test_ai_judge.py  test_ai_veto.py  test_animate_command.py  test_animation.py  test_architecture_structure.py  test_arrange.py  test_axis.py  test_cli_env.py  test_cli_imaging.py  test_cli_pyrun.py  test_cli_smoke.py  test_commands_auth.py  test_commands_check.py  test_commands_doctor.py  test_commands_export.py  test_commands_init.py  test_commands_judge.py  test_commands_libs.py  test_commands_materials.py  test_commands_metrics.py  test_commands_misc.py  test_commands_om.py  test_commands_overlay.py  test_commands_preview.py  test_commands_printability.py  test_commands_printers.py  test_commands_projects.py  test_commands_proxy_align.py  test_commands_render.py  test_commands_score.py  test_commands_silhouette.py  test_commands_usdz.py  test_commands_validate.py  test_commands_web.py  (+61 more)
tools/: gemini_arm.py  gemini_client.py  spatial_fit_experiment.py  vlm_judge.py
(+57 files in other folders)
