[project]
name = "3d-cli"
version = "0.2.2"
description = "Scriptable, AI-assisted CLI + web toolkit for parametric 3D FDM modeling, verification, matching and print prep (OpenSCAD-first)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# Core: the geometry / render / check pipeline (mesh QA) + project config. Resolved by uv.
dependencies = [
    "trimesh>=4.0",
    "manifold3d>=2.4",
    "numpy>=1.24",
    "scipy>=1.10",
    "rtree>=1.0",
    "pyyaml>=6.0",   # 3d.yaml project model + materials/printers registries (§2a/§5)
]

[project.optional-dependencies]
# Reference pre-processing (`3d preprocess`). Heavy "best path" tiers (rembg / Depth-Anything
# via transformers+torch / SAM2) stay import-guarded and out of the lock — install ad hoc.
preprocess = ["opencv-python-headless>=4.8", "pillow>=12.3.0"]
# Collision visualization (`3d collision --viz`).
viz = ["pyvista>=0.43"]
# Web dashboard (`3d web`). markdown degrades gracefully; fastapi+uvicorn serve. (pyyaml is core.)
web = ["fastapi>=0.110", "uvicorn>=0.27", "markdown>=3.5"]
# Test gate (`dev run test`): pytest + mypy (+ web deps/httpx for the web TestClient).
dev = ["pytest>=8.0", "pytest-cov>=5.0", "pytest-timeout>=2.0", "mypy>=1.8", "httpx>=0.27", "ruff>=0.5.0", "fastapi>=0.110", "uvicorn>=0.27", "markdown>=3.5"]

# TARGET (ROADMAP §29): ship as a standard installable package with a `3d` console entry point.
# Activate after the layout restructure (lib/ -> an importable `threed` package):
#   [project.scripts]
#   "3d" = "threed.cli.dispatch:main"
#   [build-system]
#   requires = ["hatchling"]
#   build-backend = "hatchling.build"
# and set `[tool.uv] package = true`.
[tool.coverage.run]
omit = [
    "lib/collision_check.py",
    "lib/collision_viz.py",
    "lib/fit_camera.py",
    "lib/frame_check.py",
    "lib/match_loop.py",
    "lib/mesh_check.py",
    "lib/printability_mesh.py",
    "lib/render.py",
    "lib/usdz.py",
]

[tool.uv]
# Until the restructure, `lib/` is not yet an importable package, so treat as a non-package
# project (no build backend) — see §29.
package = false
